--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "node app.js --watch",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,10 +17,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.3",
+    "mongoose": "^8.4.1",
     "nodemailer": "^6.9.13"
   },
   "devDependencies": {
-    "pnpm": "^9.1.0"
+    "nodemon": "^3.1.3",
+    "pnpm": "^9.1.4"
   }
 }
