--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "nodemailer": "^6.9.13",
+    "nodemon": "^3.1.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
