--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -25,7 +25,12 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "babel-jest": "^29.0.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.3",
-    "pnpm": "^9.1.4"
+    "pnpm": "^9.1.4",
+    "supertest": "^6.3.4"
   }
 }
